Fiexed .overlay height did not cover page, set position:relative in body, it does not solve all problems, but almost all. Found it on https://stackoverflow.com/a/11980357.

--- a/Assets/CSS/main.css
+++ b/Assets/CSS/main.css
@@ -6,6 +6,7 @@
 }
 
 body {
+	position: relative;
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 700;
 	margin: 0;
